[gd_scene load_steps=3 format=3 uid="uid://bxg4e7ks4g1ux"]

[ext_resource type="Script" uid="uid://xkkfuvmongvr" path="res://Scripts/Menus/audio_slider.gd" id="1_ibtu0"]
[ext_resource type="Theme" uid="uid://d28wke34y3qap" path="res://Themes/tema_general.tres" id="2_k7fsr"]

[node name="audio_slider" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibtu0")
bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 42

[node name="Audio_bus" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme = ExtResource("2_k7fsr")
theme_override_font_sizes/font_size = 32
text = "Master audio"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_k7fsr")
max_value = 1.0
step = 0.01

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="audio_value" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme = ExtResource("2_k7fsr")
theme_override_font_sizes/font_size = 32
text = "100
"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
